# unbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.c
.github/workflows/: CI.yml
dev/: doctest_util.c  find_in_project_dependencies.c  metagen.c  raw_file.c  raw_file_to_png.c  raw_viewer.c  raw_viewer.sh  sha1.c  test_detailed_docs.c
doc/: DETAILED.md  SIMPLE.md  md2pdf.sh
src/: dir.c  find_frames.c  grow.c  iterate_dir.c  load_image.c  main.c  map_file.c  reel.c  types.h  unboxer_helpers.c  unboxing_log.c  win32.h
